--- a/css/home.css
+++ b/css/home.css
@@ -1477,6 +1477,9 @@ html {
   }
 }
 @media only screen and (max-width: 1024px) {
+  .menu {
+    /* display: none; */
+  }
   .section {
     padding: 40px 0 !important;
   }
