--- a/css/global.css
+++ b/css/global.css
@@ -615,6 +615,13 @@ body {
 .header__submenu li:hover a {
   color: var(--light-color);
 }
+.wrapper-second {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  width: 100%;
+}
 .background {
   background: url("../images/background.jpg") no-repeat scroll center center;
   background-size: cover;
@@ -703,7 +710,7 @@ body {
 .content-wrapper__main {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
 }
 .content-wrapper__item {
   display: flex;
@@ -713,7 +720,6 @@ body {
   opacity: 0.8;
 }
 .content-wrapper__item:not(:last-child) {
-  margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #d9d9d9;
 }
@@ -726,6 +732,7 @@ body {
   height: 100%;
   margin-right: 20px;
   overflow: hidden;
+  flex-shrink: 0;
 }
 .content-wrapper__image img {
   width: 100%;
@@ -733,59 +740,215 @@ body {
   object-fit: cover;
   transition: all 0.24s linear;
 }
-.content-wrapper__content h3 a {
+.title-link {
+  width: fit-content;
+}
+.title-link a {
   font-size: 18px;
   text-decoration: none;
   color: var(--dark-color);
   transition: color 0.24s linear;
-
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: break-word;
+  width: 100%;
 }
-.content-wrapper__content h3 a:hover {
+.title-link a:hover {
   color: var(--primary-color);
 }
-.content-wrapper__group {
+.date {
   margin-top: 10px;
   color: #878787;
   font-size: 14px;
 }
-.content-wrapper__group span i {
+.date span i {
   margin-right: 2px;
 }
-.content-wrapper__group span + span {
+.date span + span {
   margin-left: 15px;
 }
-.content-wrapper__content p {
+.content-wrapper__desc {
+  margin: 12px 0 40px 0;
+  padding: 12px 0;
+  border-top: 1px solid #ededed;
+  border-bottom: 1px solid #ededed;
+  text-align: justify;
+  font-size: 18px;
+  color: var(--dark-color);
+}
+.content-wrapper__desc p,
+.content-wrapper__desc img {
+  margin-bottom: 25px;
+}
+.content-wrapper__desc img {
+  width: 72%;
+}
+.description {
   font-size: 16px;
   color: var(--dark-color);
   line-height: 26px;
   margin: 15px 0 30px 0;
-}
-.content-wrapper__group {
-}
-.fa {
-}
-.fa-calendar-alt {
-}
-.fa-eye {
-}
-.button {
-}
-.button--third {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
 }
 .content-wrapper__right {
   max-width: 377px;
   width: 100%;
-  background-color: red;
-  padding: 20px;
-  color: white;
   position: sticky;
   top: 0;
+}
+.block-title {
+  background-color: var(--primary-color);
+  display: flex;
+  gap: 14px;
+  align-items: center;
+  padding: 12px 20px;
+  color: var(--light-color);
+}
+.block-title__text {
+  font-size: 14.8px;
+}
+.block-title__list {
+  background-color: #effef4;
+  list-style: none;
+}
+.block-title__list li {
+  padding: 10px 20px;
+  padding-left: 45px;
+}
+.block-title__list li:not(:last-child) {
+  border-bottom: 1px solid #c3ecd0;
+}
+.block-title__list li a {
+  text-decoration: none;
+  color: var(--dark-color);
+  transition: color 0.24s linear;
+  font-size: 16px;
+  position: relative;
+}
+.block-title__list li a:before {
+  content: "\f0a9";
+  position: absolute;
+  top: 0;
+  left: -1.8rem;
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+}
+.block-title__list li a:hover {
+  color: var(--primary-color);
+}
+.articles {
+  text-align: center;
+}
+.articles-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+  grid-gap: 0 30px;
+  text-align: left;
+  margin: 30px 0;
+}
+.articles-wrapper .title-link a {
+  margin-top: 12px;
+}
+.articles-item__image {
+  height: 288px;
+  overflow: hidden;
+}
+.articles-item__image:hover img {
+  transform: scale(1.2);
+  opacity: 0.8;
+}
+.articles-item__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.24s linear;
+}
+.room {
+  text-align: center;
+}
+.room__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  --columns: 3;
+  --gap: 30px;
+  --spacing: calc(((var(--columns) - 1) * var(--gap)) / var(--columns));
+  gap: 50px var(--gap);
+  margin-top: 40px;
+}
+.room__wrapper-item {
+  width: calc((100% / var(--columns)) - var(--spacing));
+}
+.room .title-link a {
+  margin-top: 12px;
+}
+.library-wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 30px;
+}
+.library-wrapper__item {
+  display: inline-block;
+  text-decoration: none;
+  overflow: hidden;
+  position: relative;
+}
+.library-wrapper__item::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 64.35%,
+    rgba(0, 0, 0, 0.9) 100%
+  );
+  z-index: 1;
+  transition: 0.4s all ease-in-out;
+  pointer-events: none;
+}
+.library-wrapper__item:hover .library-wrapper__image {
+  transform: scale(1.2);
+}
+.library-wrapper__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform .24s linear;
+}
+.library-wrapper__content {
+  position: absolute;
+  bottom: 2rem;
+  left: 1.6rem;
+  z-index: 99;
+  color: var(--light-color);
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.library-wrapper__content span i {
+  width: 36px;
+  height: 36px;
+  line-height: 36px;
+  font-size: 15px;
+  color: #fff;
+  border-radius: 100%;
+  text-align: center;
+  background: #016823;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
+.library-wrapper__content h3 {
+  color: var(--light-color);
 }
 .footer {
   padding: 68px 0;
@@ -997,10 +1160,22 @@ body {
     left: 0;
   }
 }
+@media only screen and (max-width: 1439px) {
+  .content-wrapper {
+    flex-direction: column-reverse;
+  }
+  .content-wrapper__right {
+    max-width: 100%;
+    position: unset;
+  }
+}
 @media only screen and (max-width: 1024px) {
   .btnMenu,
   .btnMenu2 {
     display: block;
+  }
+  .background {
+    min-height: 400px;
   }
   .topbar {
     background-color: #e5e5e5;
@@ -1012,8 +1187,8 @@ body {
   .header__menu {
     display: none;
   }
-  .wrapper-second {
-    position: unset;
+  .room__wrapper {
+    --columns: 2;
   }
   .header {
     height: 80px;
@@ -1050,14 +1225,104 @@ body {
     max-width: 100%;
     width: 100%;
   }
+  .articles-item__image {
+    height: auto;
+  }
 }
 @media only screen and (max-width: 767px) {
+  .background {
+    min-height: 320px;
+  }
   .heading {
     font-size: 22px;
+  }
+  .title {
+    font-size: 18px;
+  }
+  .articles-wrapper {
+    display: grid;
+    justify-content: flex-start;
+    grid-auto-columns: 90%;
+    grid-auto-flow: column;
+    grid-gap: 1.4rem;
+    overflow: auto;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-snap-stop: always;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    -webkit-overflow-scrolling: touch;
+    scroll-padding: 1rem;
+    grid-template-columns: unset;
+  }
+  .articles-wrapper::-webkit-scrollbar {
+    display: none;
+    width: 0;
+  }
+  .articles-wrapper > * {
+    scroll-snap-align: start;
+  }
+  .room__wrapper {
+    display: grid;
+    justify-content: flex-start;
+    grid-auto-columns: 90%;
+    grid-auto-flow: column;
+    grid-gap: 1.4rem;
+    overflow: auto;
+    overflow-y: hidden;
+    scroll-snap-type: x mandatory;
+    scroll-snap-stop: always;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    -webkit-overflow-scrolling: touch;
+    scroll-padding: 1rem;
+    grid-template-columns: unset;
+    --gap: none;
+  }
+  .room__wrapper::-webkit-scrollbar {
+    display: none;
+    width: 0;
+  }
+  .room__wrapper > * {
+    scroll-snap-align: start;
+  }
+  .footer {
+    padding: 40px 0 5px;
   }
   .footer__wrapper-title {
     font-size: 16.8px;
     margin-bottom: 12px;
+  }
+  .block-title__list li a {
+    font-size: 14px;
+  }
+  .content {
+    padding-top: 28px;
+  }
+  .content-wrapper {
+    gap: 20px;
+  }
+  .content-wrapper__item {
+    flex-direction: column;
+  }
+  .content-wrapper__image {
+    max-width: 100%;
+  }
+  .content-wrapper__content {
+    margin-top: 8px;
+  }
+  .title-link a {
+    font-size: 16px;
+  }
+  .description {
+    font-size: 14px;
+    margin: 14px 0;
+  }
+  .content-wrapper__desc {
+    font-size: 14px;
+  }
+  .content-wrapper__desc img {
+    width: 100%;
   }
 }
 @media only screen and (max-width: 599px) {
@@ -1079,5 +1344,9 @@ body {
   }
   .header__logo {
     margin-right: 15px;
+  }
+  .room__wrapper {
+    grid-gap: 0.5rem;
+    grid-auto-columns: 94%;
   }
 }
