--- a/css/search.css
+++ b/css/search.css
@@ -62,6 +62,7 @@
 .pagination__link.active {
   background-color: var(--primary-color);
   color: var(--light-color);
+  pointer-events: none;
 }
 @media (hover: hover) {
   .pagination__link:hover {
