--- a/css/home.css
+++ b/css/home.css
@@ -151,6 +151,20 @@
 }
 .news {
   text-align: center;
+  position: relative;
+  z-index: 12;
+}
+#section-news {
+  position: relative;
+  overflow: hidden;
+}
+#section-news video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .news__tab {
   margin: 32px 0 40px 0;
@@ -172,6 +186,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  background-color: var(--light-color);
 }
 @media (hover: hover) {
   .news__tab-item:hover {
@@ -188,6 +203,9 @@
 }
 .news__tab-item:not(:last-child) {
   margin-right: 16px;
+}
+.news__content-item {
+  background-color: var(--light-color);
 }
 .news__content-pane {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -215,6 +233,9 @@
   vertical-align: middle;
   transition: all 0.4s linear;
 }
+.news__content-title {
+  padding: 8px 12px 12px 12px;
+}
 .news__content-title a {
   color: var(--dark-color);
   transition: color 0.4s ease 0s;
@@ -228,7 +249,6 @@
   overflow: hidden;
   text-overflow: ellipsis;
   word-break: break-word;
-  margin-top: 15px;
   line-height: 26px;
 }
 .news__content-title a:hover {
