--- a/css/home.css
+++ b/css/home.css
@@ -31,10 +31,10 @@
   z-index: 9999;
 }
 .wrapper {
-  display: none !important;
+  /* display: none; */
 }
 .wrapper.active {
-  display: block !important;
+  display: block;
 }
 .loader {
   --half-page: 50%;
