--- a/css/home.css
+++ b/css/home.css
@@ -60,7 +60,8 @@
   border: 2px solid #ff3e00;
   background: transparent;
   align-items: center;
-  animation: loader-1 3s ease-in-out 0s infinite alternate;
+  -webkit-animation: loader-1 3s ease-in-out 0s infinite alternate;
+          animation: loader-1 3s ease-in-out 0s infinite alternate;
 }
 .loader > span:nth-child(2) {
   width: 80%;
@@ -73,7 +74,25 @@
   border: 2px solid var(--primary-color);
   background: transparent;
   transform: rotate(45deg);
-  animation: loader-2 3s ease-in-out 0s infinite alternate;
+  -webkit-animation: loader-2 3s ease-in-out 0s infinite alternate;
+          animation: loader-2 3s ease-in-out 0s infinite alternate;
+}
+@-webkit-keyframes loader-1 {
+  0% {
+    transform: rotate(45deg);
+  }
+  25% {
+    transform: rotate(-45deg);
+  }
+  50% {
+    transform: rotate(-135deg);
+  }
+  75% {
+    transform: rotate(-225deg);
+  }
+  100% {
+    transform: rotate(-315deg);
+  }
 }
 @keyframes loader-1 {
   0% {
@@ -90,6 +109,23 @@
   }
   100% {
     transform: rotate(-315deg);
+  }
+}
+@-webkit-keyframes loader-2 {
+  0% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(90deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  75% {
+    transform: rotate(270deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 @keyframes loader-2 {
@@ -252,7 +288,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .news__tab {
   margin: 32px 0 40px 0;
@@ -644,7 +681,8 @@
 }
 .slider-main .item img {
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .slider-main__content,
 .slider-main__link {
@@ -675,6 +713,23 @@
   transition: color 0.2s linear;
   -webkit-animation: shakeBtn 2s linear infinite 2.5s; /* 3 seconds delay added here */
   animation: shakeBtn 2s linear infinite 2.5s; /* 3 seconds delay added here */
+}
+@-webkit-keyframes shakeBtn {
+  0%,
+  40% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  10%,
+  30% {
+    transform: translateX(-50%) rotate(-5deg);
+  }
+  20% {
+    transform: translateX(-50%) rotate(5deg);
+  }
+  50%,
+  100% {
+    transform: translateX(-50%) rotate(0deg);
+  }
 }
 @keyframes shakeBtn {
   0%,
@@ -812,7 +867,8 @@
   width: 100%;
 }
 .events__carousel-image img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   transition: all 0.2s ease-in;
 }
