--- a/css/global.css
+++ b/css/global.css
@@ -1179,6 +1179,12 @@ body {
   margin: 0 auto;
   width: 63.1% !important;
 }
+.footer__slider .owl-dots {
+  margin-top: 8px;
+}
+.footer__slider .owl-dot.active span {
+  background-color:var(--primary-color) !important;  /* Thay #yourColorHere bằng màu bạn mong muốn */
+}
 .footer__slider .owl-next,
 .footer__slider .owl-prev {
   --size-icon: 40px;
@@ -1280,6 +1286,9 @@ body {
   }
   .footer__slider {
     margin-top: 40px;
+  }
+  .footer__slider .owl-nav {
+    display: none;
   }
 }
 @media only screen and (max-width: 1023px) {
