--- a/css/global.css
+++ b/css/global.css
@@ -10,6 +10,7 @@ body {
   line-height: 1.5;
   font-family: "Open Sans", sans-serif;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 :root {
   --primary-color: #009933;
