--- a/css/home.css
+++ b/css/home.css
@@ -24,10 +24,13 @@
   background: url("../images/footer-bg.jpg") no-repeat scroll center bottom;
   background-size: cover;
 }
+#wrapper {
+  display: none;
+}
 #loader-wrapper {
-  position: fixed;
+  position: relative;
   top: 0;
-  height: 100%;
+  height: 100vh;
   left: 0;
   width: 100%;
   background-image: url("../images/forest-bg.jpg");
